# mcp-eu-ai-act

./: .gitignore  CHANGELOG.md  CI_CD_PIPELINE_GUIDE.md  CONTRIBUTING.md  Dockerfile  INSTALLATION_TESTED.md  MCP_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  TERMS_OF_USE.md  VALIDATION_CI_CD_TASK_20261223.md  apify_actor.py  cli.py  example_usage.py  glama.json  index.js  manifest.json  marketplace_api.py  mcpize.yaml  openapi_rapidapi.json  package.json  paywall_api.py  pyproject.toml  requirements.txt  server.json  server.py  smithery.yaml  test_json_format.py  test_server.py
.githooks/: pre-commit
.github/workflows/: publish-pypi.yml  publish.yml  qa-mcp-eu-ai-act.yml
.smithery/stdio/: index.cjs  index.cjs.map  manifest.json  server.mcpb
alias-package/: README.md  pyproject.toml
api_wrapper/: main.py  openapi.json
data/: eu_ai_act_articles.json  watch_rewrite_propagation.json
docs/: ANNEX4_FORMAT.md  ARTICLES_REFERENCE.md  COMPLIANCE_ROADMAP_GUIDE.md  MIGRATION_v1_to_v2.md  STRIPE_SETUP.md  TERMS_OF_USE.md  TRUST_LAYER_INTEGRATION.md
scripts/: deploy_mcp_eu_ai_act.sh  funnel_analysis.py  funnel_diagnostic.py  funnel_drop_off.py  monitor_register_conversions.py  smoke_test_mcp_prod.py  test_clean_install.sh  update_changelog.py
src/: index.ts
tests/: __init__.py  conftest.py  test_annex4_package.py  test_articles_db.py  test_backward_compat.py  test_certify_report.py  test_check_compliance_v2.py  test_cli.py  test_combined_compliance.py  test_compliance_roadmap.py  test_coverage_boost.py  test_cta_variants.py  test_data_accuracy.py  test_integration.py  test_marketplace_api.py  test_mcp_core.py  test_paywall.py  test_scanner.py  test_security.py  test_server.py  test_wheel_contents.py
